objects/EUR_CRM_PRS_Question_Set__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>RIGHT(LEFT(RecordType.DeveloperName,6),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Last_Mass_Update_Date__c</fullName>
        <label>Last Mass Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_Set_Name__c</fullName>
        <label>Question Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Weight_of_All_Questions__c</fullName>
        <label>Total Weight of All Questions</label>
        <summarizedField>EUR_CRM_PRS_Question__c.EUR_CRM_Question_Weight__c</summarizedField>
        <summaryForeignKey>EUR_CRM_PRS_Question__c.EUR_CRM_PRS_Question_Set__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>PRS Question Set (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_PRS_On_Question_Sets_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Question_Set_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_Id__c</columns>
        <columns>EUR_CRM_Last_Mass_Update_Date__c</columns>
        <columns>EUR_CRM_Total_Weight_of_All_Questions__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Set__c.EUR_BE_PRS_Question_Set_Volume_Potential</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Set__c.EUR_BE_PRS_Question_Set_Image_Level</value>
        </filters>
        <label>EUR BE All PRS On Question Sets View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_All_PRS_Question_Sets_View</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_Id__c</columns>
        <columns>EUR_CRM_Last_Mass_Update_Date__c</columns>
        <columns>EUR_CRM_Question_Set_Name__c</columns>
        <columns>EUR_CRM_Total_Weight_of_All_Questions__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Set__c.EUR_BE_PRS_Question_Set_Brand_Building_Potential</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Set__c.EUR_BE_PRS_Question_Set_Image_Level</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Set__c.EUR_BE_PRS_Question_Set_Volume_Potential</value>
        </filters>
        <label>EUR BE All PRS Question Sets View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BG_All_PRS_Question_Sets_View</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Country_Code__c</columns>
        <columns>EUR_CRM_External_Id__c</columns>
        <columns>EUR_CRM_Last_Mass_Update_Date__c</columns>
        <columns>EUR_CRM_Question_Set_Name__c</columns>
        <columns>EUR_CRM_Total_Weight_of_All_Questions__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Set__c.EUR_BG_PRS_Question_Set_Business_Potential</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_PRS_Question_Set__c.EUR_BG_PRS_Question_Set_Brand_Building_Potential</value>
        </filters>
        <label>EUR BG All PRS Question Sets View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRS-QS-{0000000000}</displayFormat>
        <label>Question Set No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRS Question Sets (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Set_Brand_Building_Potential</fullName>
        <active>true</active>
        <label>EUR BE PRS Question Set - Brand Building Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Set_Image_Level</fullName>
        <active>true</active>
        <label>EUR BE PRS Question Set - Image Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_PRS_Question_Set_Volume_Potential</fullName>
        <active>true</active>
        <label>EUR BE PRS Question Set - Volume Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Set_Brand_Building_Potential</fullName>
        <active>true</active>
        <label>EUR BG PRS Question Set - Brand Building Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_PRS_Question_Set_Business_Potential</fullName>
        <active>true</active>
        <label>EUR BG PRS Question Set - Business Potential</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRS_Question_Set</fullName>
        <active>true</active>
        <label>PRS Question Set</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>